# image-similarity-demo

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: db.py  main.py
backend/src/scripts/: bulk_index.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css
inference/: Dockerfile  pyproject.toml
inference/src/app/: main.py
